--- a/src/Application/CertificatsBundle/Resources/views/Docchangements/new.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Docchangements/new.html.twig
@@ -30,10 +30,10 @@
                     
                      <tr><td colspan="2">
                                     <p>
-                                        <button type="submit" class="btn btn-small btn-warning">Ajouter</button>
+                                        <button type="submit" class="btn btn-medium btn-warning">Ajouter</button>
                                         </form>
        
-                                        <a href="{{  path('docchangements') }}" class="btn btn-small btn-primary">Retour</a>
+                                        <a href="{{  path('docchangements') }}" class="btn btn-medium btn-primary">Retour</a>
                                     </p>
                                     
                                     
