--- a/src/Application/CertificatsBundle/Resources/views/Eservice/indexservices.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/indexservices.html.twig
@@ -27,7 +27,7 @@ MES PROPOSITIONS DE SERVICES
     {% endfor %}
 {% endfor %}
 
-<a href="{{ path('eservice_new') }}" class="btn btn-small btn-primary">Ajouter un Service</a>
+<a href="{{ path('eservice_new') }}" class="btn btn-medium btn-primary">Ajouter un Service</a>
 <br><br>
 
 
