--- a/src/Application/CertificatsBundle/Resources/views/CertificatsApplis/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/CertificatsApplis/index.html.twig
@@ -23,7 +23,9 @@
     {% endfor %}
 {% endfor %}
 
-    <a href="{{ path('applications_new') }}" class="btn btn-small btn-primary">Ajouter Application</a>
+        {% if is_granted("ROLE_ADMIN") %}
+    <a href="{{ path('applications_new') }}" class="btn btn-medium btn-primary">Ajouter Application</a>
+  {%endif %}
     <br> <br>  
 
     <table class="table table-striped table-bordered table-hover">
@@ -33,7 +35,11 @@
                 <th>Id</th>
                 <th>Nomapplis</th>
                 <th>Description</th>
+                  {% if is_granted("ROLE_ADMIN") %}
                 <th colspan="3">Actions</th>
+                {% else %}
+                <th>Actions</th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
@@ -47,21 +53,21 @@
                             <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="show" width="15" height="15" />
                         </a>
                     </td>
-                    <td>
+                   
+                    
+                     {% if is_granted("ROLE_ADMIN") %}
+                   <td>
                         <a href="{{ path('applications_update', { 'id': entity.id }) }}">
                             <img src="{{ asset('bundles/applicationcertificats/images/edit.png') }}" alt="edit" width="15" height="15" />
                         </a>
                     </td>
-                    
-                     {% if is_granted("ROLE_ADMIN") %}
-                  <td>
+                    <td>
 
 
                     <a href="{{ path('applications_delete', { 'id': entity.id }) }}">
                         <img src="{{ asset('bundles/applicationcertificats/images/delete.png') }}" alt="delete" width="15" height="15" />
                     </a>
                 </td>
-{% else %}  <td></td>
                            {% endif %}  
 
                 </tr>
