--- a/src/Application/CertificatsBundle/Resources/views/CertificatsApplis/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/CertificatsApplis/show.html.twig
@@ -15,6 +15,7 @@
 <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr class="title"><th>Id</th><th>Nom</th><th>Description</th></tr>
+        </thead>
       <tr>
             <td>{{ entity.id }}</td>
             <td>{{ entity.nomapplis }}</td>
@@ -23,16 +24,20 @@
         
         <tr>  <td colspan="3"> 
                
-      
+       {% if is_granted("ROLE_ADMIN") %}   
           <form action="{{ path('applications_delete', { 'id': entity.id }) }}" method="post">
         {{ form_errors(delete_form) }}
            {{ form_row(delete_form.id) }}
            {{ form_rest(delete_form) }}
+                   </form> 
+                  <button type="submit" class="btn btn-small btn-danger">Supprimer Application</button>
+                  
      <a href="{{ path('applications_update', { 'id': entity.id }) }}"  class="btn btn-large btn-warning">Edit</a>
-           <a href="{{ path('applications') }}" class="btn btn-large btn-success">Retour</a>
+     {% endif %}   
+     <a href="{{ path('applications') }}" class="btn btn-large btn-success">Retour</a>
       
-           <button type="submit" class="btn btn-small btn-danger">Supprimer Application</button>
-   </form> 
+         
+   
       
              </td>
              </tr>
@@ -41,7 +46,7 @@
     
          
    <h3><center>Liste des Projets associés</center></h3>
-  <table class="table table-bordered table-hover">
+  <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr class="title"><th>Nom</th><th>Description</th></tr>
          </thead>
