--- a/src/Application/CertificatsBundle/Resources/views/CertificatsProjet/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/CertificatsProjet/show.html.twig
@@ -16,7 +16,7 @@
 <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr class="title"><th>Id</th><th>Nom</th><th>Description</th></tr>
-
+  </thead>
         <tr>
             <td>{{ entity.id }}</td>
             <td>{{ entity.nomprojet }}</td>
@@ -32,12 +32,12 @@
     <button type="submit" class="btn btn-large btn-danger">Supprimer Projet</button>
 </form>
 -->
+  {% if is_granted("ROLE_ADMIN") %}
 
-<p>
     <a href="{{ path('projets_edit', { 'id': entity.id }) }}"  class="btn btn-large btn-warning">Edit</a>
-    <a href="{{ path('projets') }}" class="btn btn-large btn-success">Retour</a>
-
-</p>
+   
+{%endif %}
+ <a href="{{ path('projets') }}" class="btn btn-large btn-success">Retour</a>
 </td>
 </tr>
         </tbody>
@@ -47,7 +47,7 @@
 <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr class="title"><th>Nom</th><th>Description</th></tr>
-
+  </thead>
         {% for appli in applis %}
         <tr>
             <td>{{ appli.nomapplis }}</td>
@@ -63,7 +63,7 @@
 <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr class="title"><th>Nom</th><th>Date Début</th></tr>
-
+  </thead>
         {% for changement in changements %}
         <tr> <td>{{ changement.nom }}</td>
             <td>{{ changement.dateDebut|date('Y-m-d H') ~ 'h' }} </td>
@@ -75,7 +75,7 @@
 
 
 <h3><center>Liste des Fichiers associés</center></h3>
-                    <table class="table table-bordered table-hover">
+                    <table class="table table-striped  table-bordered table-hover">
                         <thead>
                             <tr class="title"><th>id</th><th>Nom</th><th>Path</th></tr>
                         </thead>
@@ -93,7 +93,7 @@
 <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr class="title"><th>Nom</th></tr>
-
+  </thead>
         {% for certificat in certificats %}
         <tr> <td>{{ certificat.fileName }}</td>
         </tr>
