--- a/src/Application/CertificatsBundle/Resources/views/Changements/calendar.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/calendar.html.twig
@@ -30,7 +30,7 @@ Changements Calendrier
 
 {{ 'Highlight this sentence'|highlight('i')|raw }}
 {{ 'Highlight this sentence'|highlightme|raw }#}
-    <a href="{{ path('changements_newflow') }}" class="btn btn-small btn-primary">Ajouter Changement</a>
+    <a href="{{ path('changements_newflow') }}" class="btn btn-medium btn-primary">Ajouter Changement</a>
 
     <table class="table small table-striped table-condensed table-bordered table-hover">
 
