--- a/src/Application/CertificatsBundle/Resources/views/ChronoUser/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/ChronoUser/index.html.twig
@@ -23,7 +23,10 @@
     {% endfor %}
 {% endfor %}
 
-    <a href="{{ path('chronouser_new') }}" class="btn btn-small btn-primary">Ajouter Utilsateur</a>
+    {% if is_granted("ROLE_ADMIN") %}
+    <a href="{{ path('chronouser_new') }}" class="btn btn-medium btn-primary">Ajouter Utilsateur</a>
+    {% endif %}
+    
     <br> <br>  
     
 
@@ -39,7 +42,11 @@
      <th{% if pagination.isSorted('a.telephone') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Telephone', 'a.telephone') }}</th>
       <th{% if pagination.isSorted('a.bureau') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Bureau', 'a.bureau') }}</th>
       <th{% if pagination.isSorted('a.email') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Email', 'a.email') }}</th>
-            <th colspan="3">Actions</th>      
+         {% if is_granted("ROLE_ADMIN") %}
+      <th colspan="2">Actions</th>      
+      {% else %}
+      <th>Actions</th>  
+      {% endif %}
             </tr>
         </thead>
         <tbody>
@@ -59,14 +66,13 @@
                         <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="show" width="15" height="15" />
                     </a>
                 </td>
-                <td>
-
-
+ {% if is_granted("ROLE_ADMIN") %}   
+<td>
                     <a href="{{ path('chronouser_edit', { 'id': entity.id }) }}">
                         <img src="{{ asset('bundles/applicationcertificats/images/edit.png') }}" alt="edit" width="15" height="15" />
                     </a>
                 </td>
-                        
+ {% endif %}                       
    
           
         </tr>
