--- a/src/Application/CertificatsBundle/Resources/views/ChronoUser/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/ChronoUser/show.html.twig
@@ -20,8 +20,10 @@
     {% endfor %}
 {% endfor %}
  <a href="{{ path('chronouser') }}" class="btn btn-small btn-success">Retour</a>
-   <a href="{{ path('chronouser_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
-<br> <br> 
+ {% if is_granted("ROLE_ADMIN") %}
+ <a href="{{ path('chronouser_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
+{% endif %}
+ <br> <br> 
 
      <table class="table table-striped table-bordered table-hover">
 
@@ -57,13 +59,14 @@
     </tbody>
 </table>
 
-
+{% if is_granted("ROLE_ADMIN") %}
         <form action="{{ path('chronouser_delete', { 'id': entity.id }) }}" method="post">
         {{ form_errors(delete_form) }}
            {{ form_row(delete_form.id) }}
            {{ form_rest(delete_form) }}
              <button type="submit" class="btn btn-small btn-danger">Supprimer Utilisateur</button>
         </form>
+ {% endif %}
   
      
     
