--- a/src/Application/CertificatsBundle/Resources/views/ChronoUsergroup/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/ChronoUsergroup/index.html.twig
@@ -23,18 +23,24 @@
     {% endfor %}
 {% endfor %}
     
-      <a href="{{ path('chronogroup_new') }}" class="btn btn-small btn-primary">Ajouter Groupe</a>
+{% if is_granted("ROLE_ADMIN") %}
+    <a href="{{ path('chronogroup_new') }}" class="btn btn-medium btn-primary">Ajouter Groupe</a>
+    {% endif %}
     <br> <br> 
     
     <table class="table table-striped table-bordered table-hover">
 
     <thead>
-        <tr>
+        <tr class="title">
             <th>Id</th>
             <th>Nomgroup</th>
              <th>Description</th>
               <th>Email</th>
+               {% if is_granted("ROLE_ADMIN") %}
+            <th colspan="2">Actions</th>
+            {% else %}
             <th>Actions</th>
+            {% endif %}
         </tr>
     </thead>
     <tbody>
@@ -49,6 +55,7 @@
                         <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="notes_show" width="15" height="15" />
                     </a>
                 </td>
+ {% if is_granted("ROLE_ADMIN") %}
                 <td>
 
 
@@ -56,7 +63,7 @@
                         <img src="{{ asset('bundles/applicationcertificats/images/edit.png') }}" alt="notes_edit" width="15" height="15" />
                     </a>
                 </td>
-           
+           {% endif %}
         </tr>
     {% endfor %}
     </tbody>
