--- a/src/Application/CertificatsBundle/Resources/views/ChronoUsergroup/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/ChronoUsergroup/show.html.twig
@@ -12,7 +12,9 @@
       
      <br><br>
        <a href="{{ path('chronogroup') }}" class="btn btn-small btn-success">Retour</a>
-   <a href="{{ path('chronogroup_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
+  {% if is_granted("ROLE_ADMIN") %}
+       <a href="{{ path('chronogroup_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
+       {% endif %}
 <br> <br> 
 
      <table class="table table-striped table-bordered table-hover">
@@ -28,21 +30,21 @@
         </tr>
     </tbody>
 </table>
-
+{% if is_granted("ROLE_ADMIN") %}
   <form action="{{ path('chronogroup_delete', { 'id': entity.id }) }}" method="post">
         {{ form_errors(delete_form) }}
            {{ form_row(delete_form.id) }}
            {{ form_rest(delete_form) }}
              <button type="submit" class="btn btn-small btn-danger">Supprimer Groupe</button>
         </form>
-  
+ {% endif %} 
   
 <h3><center>Liste des Utilisateurs de ce groupe</center></h3>
 <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr class="title"><th>Nom</th><th>Description</th><th>Email</th></tr>
 
-                {% for myuser in entity.users %}
+      </thead>          {% for myuser in entity.users %}
         <tr>
             <td>{{ myuser.nomUser }}</td>
              <td>{{ myuser.infos }}</td>
