--- a/src/Application/CertificatsBundle/Resources/views/Docchangements/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Docchangements/index.html.twig
@@ -24,7 +24,7 @@ Fichiers sur les Changements
 {% endfor %}
   
 
-    <a href="{{ path('docchangements_new') }}" class="btn btn-small btn-primary">Ajouter Fichier</a>
+    <a href="{{ path('docchangements_new') }}" class="btn btn-medium btn-primary">Ajouter Fichier</a>
     <br> <br>  
 
     <table class="table table-striped table-bordered table-hover">
