--- a/src/Application/CertificatsBundle/Resources/views/Environnements/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Environnements/index.html.twig
@@ -22,16 +22,24 @@
     </div>
     {% endfor %}
 {% endfor %}
-      <a href="{{ path('environnement_new') }}" class="btn btn-small btn-primary">Ajouter Environnement</a>
+ {% if is_granted("ROLE_ADMIN") %}
+    <a href="{{ path('environnement_new') }}" class="btn btn-medium btn-primary">Ajouter Environnement</a>
+    {% endif %}
     <br> <br>  
 
     <table class="table table-striped table-bordered table-hover">
     <thead>
-        <tr>
+        <tr class="title">
             <th>Id</th>
             <th>Nom</th>
             <th>Description</th>
-            <th>Actions</th>
+            {% if is_granted("ROLE_ADMIN") %}
+                <th colspan="3">Actions</th>
+                {% else %}
+                <th>Actions</th>
+                {% endif %}
+                
+        
         </tr>
     </thead>
     <tbody>
@@ -45,11 +53,14 @@
                             <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="notes_show" width="15" height="15" />
            </a>
                     </td>
+                    
+                      {% if is_granted("ROLE_ADMIN") %}
                     <td>
                         <a href="{{ path('environnement_edit', { 'id': entity.id }) }}">
                             <img src="{{ asset('bundles/applicationcertificats/images/edit.png') }}" alt="notes_edit" width="15" height="15" />
                         </a>
                     </td>
+                    {% endif %}
                
         </tr>
     {% endfor %}
