--- a/src/Application/CertificatsBundle/Resources/views/Environnements/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Environnements/show.html.twig
@@ -30,16 +30,19 @@
         </tr>
          <tr>  <td colspan="3"> 
                
-      
+    {% if is_granted("ROLE_ADMIN") %}  
           <form action="{{ path('environnement_delete', { 'id': entity.id }) }}" method="post">
         {{ form_errors(delete_form) }}
            {{ form_row(delete_form.id) }}
            {{ form_rest(delete_form) }}
-     <a href="{{ path('environnement_edit', { 'id': entity.id }) }}"  class="btn btn-large btn-warning">Edit</a>
-           <a href="{{ path('environnement') }}" class="btn btn-large btn-success">Retour</a>
-      
+         
            <button type="submit" class="btn btn-small btn-danger">Supprimer Environnement</button>
    </form> 
+                 <a href="{{ path('environnement_edit', { 'id': entity.id }) }}"  class="btn btn-large btn-warning">Edit</a>
+     {% endif %}
+     
+     <a href="{{ path('environnement') }}" class="btn btn-large btn-success">Retour</a>
+      
       
     </tbody>
 </table>
