--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,19 +14,23 @@ body {
 background-image:url(/images/ravenna.png);
 }
 #footer {
-              border: 1px solid #ccc; 
+       position: relative;
+	bottom: 5px;
+	height: 30px;
+	width: 70%;
+	/*background: url('images/bg_pied.png') repeat-x;*/
+        margin:auto;
+        
+           border: 1px solid #ccc; 
               clear: both; 
               text-align: center; 
               padding: 10px; 
               color: #aaa;
               
-    position:relative;
-    bottom:5px;
-    width:99%;
-    margin:auto;
-    height:30px;   /* Height of the footer */
+    
     background:#eaeaea;
-}         
+}
+        
 
 </style>
        
@@ -47,11 +51,12 @@ background-image:url(/images/ravenna.png);
                 {% endblock %}
                
                 </div>
-                
-         <div id="footer">
+          <div id="footer">
                     <p align="center">{{ 'copyright MROOT'|trans }} © 2012-2013</p>
                      
-                </div>        </div>
+                </div>        
+               </div>
+        
         
                 <!-- Le javascript ================================================== -->
                 <!-- Placed at the end of the document so the pages load faster -->
