--- a/app/Resources/views/basen.html.twig
+++ b/app/Resources/views/basen.html.twig
@@ -30,6 +30,7 @@
 body {
 background-image:url(images/ravenna.png);
 }
+
     </style> 
  {% endblock %}
         
@@ -70,7 +71,7 @@ background-image:url(images/ravenna.png);
                 <script src="{{ asset('jquery/jquery-1.8.3.js') }}" type="text/javascript"></script>
                 <script type="text/javascript" src="{{ asset('jquery/jquery-ui-1.9.2.custom.min.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('jquery/jquery.ui.datepicker.js') }}"></script>
-                <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
+                <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
    {#{ tinymce_init('advanced') }#}
         <!-- <script type="text/javascript" src="{#{ asset('bundles/staflcontinymce/vendor/tiny_mce/tiny_mce.js') }#}"></script>
             -->         
