--- a/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
@@ -21,6 +21,11 @@ Changements
 
 {% block content %}
 
+{#{{ knp_menu_render('ApplicationCertificatsBundle:MenuBuilder:mainMenu', {'currentClass': 'active'}) }}
+#}
+{#
+{{ knp_menu_render('ApplicationCertificatsBundle:MenuBuilder:mainMenu', { 'template': 'ApplicationCertificatsBundle:Menu:knp_menu.html.twig' }) }}
+#}
 {% for type, flashMessages in app.session.flashbag.all() %}
     {% for flashMessage in flashMessages %}
 <div class="alert alert-{{ type }}">
