--- a/src/Application/CertificatsBundle/Resources/views/Changements/indexapy.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/indexapy.html.twig
@@ -3,6 +3,10 @@
   {% block stylesheets %}
 {{ parent() }}
 <link rel="stylesheet" href="{{ asset('bundles/applicationcertificats/css/datagrid.css') }}" type="text/css" media="all" /> 
+<source>
+div.pagination {
+text-align:center;}
+</source>
 {% endblock %}
 
 
