blog  modif mineure

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -113,7 +113,8 @@
                                             <li><a href="{{ path('certificatscenter') }}"><i class="icon-fire"></i> {{ 'Certificats'|trans }}</a></li>
                                                    <li><a href="{{ path('certificatscenter_viewapy') }}"><i class="icon-plus-sign"></i> {{ 'Certificats-APY'|trans }}</a></li>
                                                      <li><a href="{{ path('certificatscenter_new') }}"><i class="icon-camera"></i> {{ 'Nouveau Certificat'|trans }}</a></li>
-                           
+                             <li><a href="{{ path('certificatscenter_check') }}"><i class="icon-camera"></i> {{ 'Vérifier Certificat'|trans }}</a></li>
+                                                     
                                         </ul>
                                     </li>
                                     
@@ -132,9 +133,9 @@
                                     </li>
                                     
                                          
-                                    
+                                    {#
                                     <li><a href="{{ path('sonata_news_home') }}">{{ 'Blog'|trans }}</a></li>
-                               
+                               #}
                                     
                                  
                                     
