--- a/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/edit.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/edit.html.twig
@@ -136,6 +136,17 @@ var parts = Vid_cert.split('/');
 {% endblock %}
 
 
+{% block stylesheets %}
+{{ parent() }}
+<link rel="stylesheet" href="{{ asset('bundles/applicationcertificats/css/sliding.css') }}" type="text/css" media="all"/>
+<style>
+        
+        tr.single {
+         background-color: #f1f1f1;
+        }
+
+    </style> 
+{% endblock %}
 
 {% block content_header '' %}
 {% block title %}
@@ -148,7 +159,7 @@ var parts = Vid_cert.split('/');
     <form action="{{ path('certificatscenter_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <table class="table table-bordered">
             <tbody>
-                <tr><td>
+                <tr class="single"><td>
                         <div>
     {{ form_errors(edit_form.fileName) }}
     {{ form_label(edit_form.fileName, 'Nom du Fichier'|trans) }}
@@ -187,7 +198,7 @@ var parts = Vid_cert.split('/');
                                     </div>
                                 </td>
                             </tr>
-                            <tr><td colspan="2">
+                            <tr class="single"><td colspan="2">
                                     <p>
                                         <button type="submit" class="btn btn-small btn-warning">Modifier</button>
                                         <a href="{{ path(btnretour) }}" class="btn btn-small btn-success">Retour</a>
