Services produit ajout categories

--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/show.html.twig
@@ -25,6 +25,11 @@ PRODUIT: {{ entity.name }}
                 <td>{{ entity.id }}</td>
             </tr>
             <tr>
+            <th>Categorie</th>
+               <td>{{ entity.categorie.nom }}</td>
+          
+        </tr>
+            <tr>
                 <th>Name</th>
                 <td>{{ entity.name }}</td>
             </tr>
