--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/show.html.twig
@@ -24,19 +24,35 @@ PRODUIT: {{ entity.name }}
                 <th>Id</th>
                 <td>{{ entity.id }}</td>
             </tr>
-            <tr>
-            <th>Categorie</th>
-               <td>{{ entity.categorie.nom }}</td>
-          
-        </tr>
+           
             <tr>
                 <th>Name</th>
                 <td>{{ entity.name }}</td>
             </tr>
             <tr>
+                <th>Categorie</th>
+                 {% if entity.categorie is not null %}               
+               <td> {{ entity.categorie.nom }}</td>
+                 {% else %}
+                  <td>---</td>
+                  {% endif %}
+            </tr>
+            
+             <tr>
+                <th>Proprietaire</th>
+                 {% if entity.proprietaire is not null %}               
+                    <td>{{ entity.proprietaire.username }}</td>
+                     {% else %}
+                  <td>---</td>
+                  {% endif %}
+            </tr>
+            
+            
+             <tr>
                 <th>Description</th>
                 <td>{{ entity.description|raw }}</td>
             </tr>
+                       
             <tr>
                 <th>Image</th>
          <td> {% if entity.imageName is not null %}               
